2004-06-22  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* generic/tclEvent.c:
	* generic/tclInt.h:
	* unix/tclUnixNotfy.c:
	* unix/tclUnixThrd.c:
	* win/tclWinThrd.c: [Bug #770053]. See bug report for
	more information about what it does.

	* tests/unixNotfy.test: rewritten to use tcltest::threadReap
	to gracefully wait for the test thread to exit. Otherwise
	we got a race condition with main thread exiting before the
	test thread. This exposed the long-standing Tcl lib issue
	with resource garbage-collection on application exit.

2004-06-21  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tclWin32Dll.c (DllMain, _except_dllmain_detach_handler,
	TclpCheckStackSpace, _except_checkstackspace_handler,
	TclWinCPUID, _except_TclWinCPUID_detach_handler):
	* win/tclWinChan.c (Tcl_MakeFileChannel,
	_except_makefilechannel_handler):
	* win/tclWinFCmd.c (DoRenameFile,
	_except_dorenamefile_handler, DoCopyFile,
	_except_docopyfile_handler):
	Rework pushing of exception handler function pointer
	so that compiling with gcc -O3 works. Remove empty
	function call to avoid compiler warning. Mark the
	DllMain function as noinline to avoid compiler
	error from duplicated asm labels in generated code.

2004-06-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/winDde.test: Fixed -async test
	* win/tclWinDde.c: Backported the fix from 8.5 to avoid hanging in
	the presence of applications that do not process Window messages.

2004-06-10  Andreas Kupries  <andreask@activestate.com>

	* generic/tclDecls.h:        Regenerated on a unix box.
	* generic/tclIntDecls.h:     The Win/DOS EOLs from the
	* generic/tclIntPlatDecls.h: last regen screwed up compilation
	* generic/tclPlatDecls.h:    with an older gcc.
	* generic/tclStubInit.c:

2004-06-10  Zoran Vasiljevic <vasiljevic@users.sf.net>

        * generic/tclIOUtil.c: partially corrected [Bug 932314].
          Also, corrected return values of Tcl_FSChdir() to
          reflect those of the underlying platform-specific call.