@@ -1,3 +1,8 @@
+2004-06-29  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
+	* library/safe.tcl: Make sure that the temporary variable is
+	local to the namespace and not inadvertently global. [Bug 981733]
+
 2004-06-22  Zoran Vasiljevic <vasiljevic@users.sf.net>
 
 	* generic/tclEvent.c:
